fixed ion card positioning to fit on mobile screens

--- a/src/app/signup/signup.page.scss
+++ b/src/app/signup/signup.page.scss
@@ -1,10 +1,10 @@
 ion-card {
-    top: 10%;
+    top: 5%;
 }
 
 ion-button {
     width: 150px;
-    margin: 45px 10px 40px 10px;
+    margin: 40px 10px 40px 10px;
 }
 
 .buttons {
@@ -12,15 +12,15 @@ ion-button {
 }
 
 ion-item {
-    margin-bottom: 3%;
+    margin-bottom: 2%;
 }
 
 ion-card-header {
     text-align: center;
-    padding-top: 40px;
-    padding-bottom: 45px;
+    padding-top: 30px;
+    padding-bottom: 40px;
 }
 
 img {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
